--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/ubuntu": "^5.0.8",
     "aos": "^3.0.0-beta.6",
     "next": "^14.0.2",
     "prettier": "^3.1.0",
@@ -17,7 +18,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router": "^6.19.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
