--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-photo-view": "^1.2.3",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.19.0",
     "sass": "^1.69.5",
