--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/ubuntu": "^5.0.8",
     "aos": "^3.0.0-beta.6",
+    "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.19.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "swiper": "^11.0.4",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
