--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-photo-view": "^1.2.3",
