--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.2",
     "eslint": "^8",
